# bug-reproduction-cell-routing

./: README.md  build-happs.sh  flake.nix
example1/: Cargo.toml  README.md  package-lock.json  package.json
example1/dnas/posts/zomes/coordinator/posts/src/: lib.rs
example1/ui/: index.html
example1/ui/src/: holochain-app.ts
example1/ui/src/posts/posts/: types.ts
example1/workdir/: web-happ.yaml
example2/: Cargo.toml
example2/dnas/posts/workdir/: dna.yaml
example2/dnas/posts/zomes/coordinator/posts/src/: lib.rs
example2/dnas/posts/zomes/integrity/posts/src/: lib.rs
example2/ui/: index.html  package.json
example2/ui/src/: contexts.ts  holochain-app.ts
example2/workdir/: happ.yaml
