[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
members = ["dnas/*/zomes/coordinator/*", "dnas/*/zomes/integrity/*"]

[workspace.dependencies]
hdi = "=0.5.0-rc.0"
hdk = "=0.4.0-rc.0"
serde = "1"

[workspace.dependencies.posts]
path = "dnas/posts/zomes/coordinator/posts"

[workspace.dependencies.posts_integrity]
path = "dnas/posts/zomes/integrity/posts"
